Horizontal alignment was off, fixed

--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ html {
     display: flex;
     justify-content: center;
     align-items: flex-end;
-    margin-bottom: 80px;
+    margin-bottom: 60px;
 }
 
 .largeContainer {
@@ -38,7 +38,7 @@ html {
     display: flex;
     flex-direction: column;
     align-items: center;
-    top: 100px;
+    top: 75px;
     left: 50%;
     transform: translateX(-50%);
 }
